fix(style): Katex adding scrollbars on non-overflowing content (#1989)

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -594,6 +594,7 @@ ol.overflow {
 }
 
 .katex-display {
+  display: initial;
   overflow-x: auto;
   overflow-y: hidden;
 }
